--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,12 +1,53 @@
 {% extends "base.html" %}
 {% block title %}
-{{ post.title }} | {% if post.location and post.location.is_published %}{{ post.location.name }} |{% endif %} {{ post.pub_date|date:"d E Y" }}
+  {{ post.title }} | {% if post.location and post.location.is_published %}{{ post.location.name }}{% else %}Планета Земля{% endif %} |
+  {{ post.pub_date|date:"d E Y" }}
 {% endblock %}
 {% block content %}
-  <article>
-    <p>{{ post.pub_date|date:"d E Y" }} | {% if post.location and post.location.is_published %}{{ post.location.name }}{% else %}Планета Земля{% endif %}<br>
-      <small>От автора @{{ post.author.username }} в категории {% include "includes/category_link.html" %}</small></p>
-    <h3>{{ post.title }}</h3>
-    <p>{{ post.text|linebreaksbr }}</p>
-  </article> 
+  <div class="col d-flex justify-content-center">
+    <div class="card" style="width: 40rem;">
+      <div class="card-body">
+        {% if confirm_delete %}
+        <div class="confirmation-dialog mb-4 p-3 border border-warning rounded">
+          <p class="fw-bold">Вы уверены, что хотите удалить этот пост?</p>
+          <form method="post" action="{% url 'blog:delete_post' post_id=post.id %}">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-danger btn-sm">Да, удалить</button>
+            <a href="{% url 'blog:post_detail' post.id %}" class="btn btn-secondary btn-sm">Отмена</a>
+          </form>
+        </div>ё
+        {% endif %}
+        {% if post.image %}
+          <a href="{{ post.image.url }}" target="_blank">
+            <img class="border-3 rounded img-fluid img-thumbnail mb-2 mx-auto d-block" src="{{ post.image.url }}">
+          </a>
+        {% endif %}
+        <h5 class="card-title">{{ post.title }}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">
+          <small>
+            {% if not post.is_published %}
+              <p class="text-danger">Пост снят с публикации админом</p>
+            {% elif not post.category.is_published %}
+              <p class="text-danger">Выбранная категория снята с публикации админом</p>
+            {% endif %}
+            {{ post.pub_date|date:"d E Y, H:i" }} | {% if post.location and post.location.is_published %}{{ post.location.name }}{% else %}Планета Земля{% endif %}<br>
+            От автора <a class="text-muted" href="{% url 'user:profile' post.author.username %}">@{{ post.author.username }}</a> в
+            категории {% include "includes/category_link.html" %}
+          </small>
+        </h6>
+        <p class="card-text">{{ post.text|linebreaksbr }}</p>
+        {% if user == post.author %}
+          <div class="mb-2">
+            <a class="btn btn-sm text-muted" href="{% url 'blog:edit_post' post_id=post.id %}" role="button">
+              Отредактировать публикацию
+            </a>
+            <a class="btn btn-sm text-muted" href="{% url 'blog:delete_post' post_id=post.id %}" role="button">
+              Удалить публикацию
+            </a>
+          </div>
+        {% endif %}
+        {% include "includes/comments.html" %}
+      </div>
+    </div>
+  </div>
 {% endblock %}
