--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -7,16 +7,6 @@
   <div class="col d-flex justify-content-center">
     <div class="card" style="width: 40rem;">
       <div class="card-body">
-        {% if confirm_delete %}
-        <div class="confirmation-dialog mb-4 p-3 border border-warning rounded">
-          <p class="fw-bold">Вы уверены, что хотите удалить этот пост?</p>
-          <form method="post" action="{% url 'blog:delete_post' post_id=post.id %}">
-            {% csrf_token %}
-            <button type="submit" class="btn btn-danger btn-sm">Да, удалить</button>
-            <a href="{% url 'blog:post_detail' post.id %}" class="btn btn-secondary btn-sm">Отмена</a>
-          </form>
-        </div>ё
-        {% endif %}
         {% if post.image %}
           <a href="{{ post.image.url }}" target="_blank">
             <img class="border-3 rounded img-fluid img-thumbnail mb-2 mx-auto d-block" src="{{ post.image.url }}">
@@ -31,17 +21,17 @@
               <p class="text-danger">Выбранная категория снята с публикации админом</p>
             {% endif %}
             {{ post.pub_date|date:"d E Y, H:i" }} | {% if post.location and post.location.is_published %}{{ post.location.name }}{% else %}Планета Земля{% endif %}<br>
-            От автора <a class="text-muted" href="{% url 'user:profile' post.author.username %}">@{{ post.author.username }}</a> в
+            От автора <a class="text-muted" href="{% url 'blog:profile' post.author.username %}">@{{ post.author.username }}</a> в
             категории {% include "includes/category_link.html" %}
           </small>
         </h6>
         <p class="card-text">{{ post.text|linebreaksbr }}</p>
         {% if user == post.author %}
           <div class="mb-2">
-            <a class="btn btn-sm text-muted" href="{% url 'blog:edit_post' post_id=post.id %}" role="button">
+            <a class="btn btn-sm text-muted" href="{% url 'blog:edit_post' post.id %}" role="button">
               Отредактировать публикацию
             </a>
-            <a class="btn btn-sm text-muted" href="{% url 'blog:delete_post' post_id=post.id %}" role="button">
+            <a class="btn btn-sm text-muted" href="{% url 'blog:delete_post' post.id %}" role="button">
               Удалить публикацию
             </a>
           </div>
