--- a/blogicum/templates/blog/user.html
+++ b/blogicum/templates/blog/user.html
@@ -7,13 +7,13 @@
   <div class="col d-flex justify-content-center">
     <div class="card" style="width: 40rem;">
       <div class="card-header">
-        Редактирование профиля - {{ profile.username }}
+        Редактирование профиля - {{ request.user.username }}
       </div>
       <div class="card-body">
-        <form method="post" action="{% url 'user:edit_profile' username=profile.username %}">
+        <form method="post">
           {% csrf_token %}
           {% bootstrap_form form %}
-          {% bootstrap_button button_type="submit" content="Сохранить" %}
+          {% bootstrap_button button_type="submit" content="Отправить" %}
         </form>
       </div>
     </div>
